<resources>
    <string name="app_name">HealthScheduler</string>
    <string name="title_activity_fullscreen_login" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_splash" translatable="false">FullscreenActivity</string>
    <string name="facebook_app_id" translatable="false">646156029431861</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb646156029431861</string>
    <string name="email_login">Email</string>
    <string name="morada">Morada</string>
    <string name="phone">Telemóvel</string>
    <string name="password_login">Palavra-passe</string>
    <string name="entrar">Entrar</string>
    <string name="register">Registar</string>
    <string name="enviar">Enviar</string>
    <string name="editar">Editar</string>
    <string name="logout">Logout</string>
    <string name="tentarnovamente">Tentar novamente</string>
    <string name="termosecondicoes" translatable="false">
        Cláusula 1.ª : Designação\n
        \n1. Os presentes termos e condições gerais são destinados a utilizadores que utilizem em ocasiões regulares o acesso e a utilização da aplicação HealthScheduler, criado pela empresa denominada HyperCodeum e prestado ao utilizador em serviço da empresa HyperCodeum.
        \n\nCláusula 2.ª : Descrição e funções da Aplicação\n
        \n1. A Aplicação HealthScheduler consiste em uma aplicação para aplicativos android, esta desenvolvida pela HyperCodeum , contem autenticação ou registo necessário de uma conta para a utilização da aplicação e dos serviços oferecidos pelo mesmo.
        \n2. Os diversos serviços oferecidos pela aplicação HealthScheduler são a consulta e conversação entre utentes e colaboradores do Centro Hospitalar Vila Nova de Gaia/Espinho.
        \n3. A autenticação do utilizador e efetuado através do email do utilizador com password, se o mesmo não tiver os mesmos terá de efetuar registro dentro da aplicação com cadenciais validas.
        \n\nCláusula 3.ª : Acesso e execução\n
        \n1. O utilizador pode aceder através da aplicação HealthScheduler aos serviços que são oferecidos de acordo com o seu nível de permissão, ficando apto a utilizar as funcionalidades que são disponibilizadas ao mesmo depende.
        \n2. Em caso de futuras atualizações da HealthScheduler, o utilizador será notificado acerca das mesmas, se o utilizador decidir não atualizar irá ter não acesso a novas futuras funcionalidades.
        \n3. A utilização da HealthScheduler implica a confirmação pelos utilizadores que aceita todos os presentes Termos e Condições Gerais.
        \n4. O utilizador é responsável por manter e não transmitir as informações pessoais confidenciais tais como password, email e informações não disponíveis para outros utilizadores e terceiros.
        \n5. Quaisquer danos ou roubo de informações que possam vir a emergir de eventual transmissão a outros utilizadores e a terceiros das informações pessoais, passwords, etc… são da responsabilidade exclusiva do Utilizador.
        \n\nCláusula 4.ª : Utilização da aplicação\n
        \n1. A qualidade de utilização da aplicação HealthScheduler depende do equipamento Android utilizado para acesso da APP, compete ao utilizador verificar se o dispositivo está em estado adequado para a utilização da aplicação.
        \n2. O utilizador deverá reportar à HyperCodeum de quaisquer anomalias que sejam detetadas relativamente a aplicação SpaceSoccer que possam interferir com a utilização básica da aplicação, também o utilizador deve reportar acerca de quaisquer aplicações fraudulentas feitas por terceiros que tenham com intenções de manipular o código da aplicação ou descobrir informações pessoais de acesso a aplicação tais como passwords.
        \n3. Se por implementação futura, a HyperCodeum reserva-se o direito de colocar publicidade na aplicação HealthScheduler.
        \n\nCláusula 5.ª : Responsabilidade do Utilizador\n
        \n1. A HyperCodeum não se responsabilizará de quaisquer danos diretos ou indiretos feitos pelo utilizador na alteração do código base da aplicação.
        \n2. A utilizador reconhece que o acesso e a utilização à aplicação HealthScheduler só e possível com recurso a sistemas informáticos e redes de comunicações que podem por ora apresentar erros ou falhas no funcionamento.
        \n3. A HyperCodeum não se responsabiliza nem responderá a quaisquer danos que fora causados ao utilizador, diretamente ou indiretamente, por causa do incumprimento de obrigações tais como a de não partilhar informações pessoais com terceiros.
        \n\nCláusula 6.ª : Dados pessoais\n
        \n1.  A entidade HyperCodeum é responsável pelo tratamento de dados pessoais recolhidos e gerados pelos utilizadores no uso da aplicação SpaceSoccer , bem como o armazenamento dos mesmos.
    </string>
    <string name="infoapplication" translatable="false">
            HealthScheduler : Quem criou?\n
        \n1. A HealthScheduler foi uma aplicação criada por um grupo de estudantes universitários do Instituto Politécnico Do Cávado e do Ave, do curso de Aplicações Móveis do 2 ano (2020).
        \n\nHealthScheduler : Descrição e funções da aplicação\n
        \n1. A Aplicação HealthScheduler consiste em uma aplicação para aplicativos android, esta desenvolvida pela HyperCodeum. Contem autenticação ou registo necessário de uma conta para a utilização da aplicação e dos serviços oferecidos pelo mesmo.
        \n2. Os diversos serviços oferecidos pela aplicação HealthScheduler são a consulta e conversação entre utentes e colaboradores do Centro Hospitalar Vila Nova de Gaia/Espinho.
        \n3. A autenticação do utilizador é efetuado através do email do utilizador com password, se o mesmo não tiver os mesmos terá de efetuar registro dentro da aplicação com cadenciais validas.
        \n\nHealthScheduler : Acesso e execução\n
        \n1. O utilizador pode aceder através da aplicação HealthScheduler aos serviços que são oferecidos de acordo com o seu nível de permissão, ficando apto a utilizar as funcionalidades que são disponibilizadas ao mesmo depende.
        \n2. Em caso de futuras atualizações da HealthScheduler, o utilizador será notificado acerca das mesmas, se o utilizador decidir não atualizar irá ter não acesso a novas futuras funcionalidades.
        \n3. O utilizador é responsável por manter e não transmitir as informações pessoais confidenciais tais como password, email e informações não disponíveis para outros utilizadores e terceiros.
        \n\nHealthScheduler : Utilização da aplicação\n
        \n1. A qualidade de utilização da aplicação HealthScheduler depende do equipamento Android utilizado para acesso da aplicação, compete ao utilizador verificar se o dispositivo está em estado adequado para a utilização da aplicação.
        \n2. O utilizador deverá reportar à HyperCodeum de quaisquer anomalias que sejam detetadas relativamente a aplicação HealthScheduler que possam interferir com a utilização básica da aplicação, também o utilizador deve reportar acerca de quaisquer aplicações fraudulentas feitas por terceiros que tenham com intenções de manipular o código da aplicação ou descobrir informações pessoais de acesso a aplicação tais como passwords.
    </string>
    <string name="contactos">Contactos</string>
    <string name="pagina_inicial">Página Inicial</string>
    <string name="utilizador">Utilizador</string>
    <string name="consultas">Consultas</string>
    <string name="chat">Chat</string>
    <string name="nao_tem_novas_notifica_es">Não tem novas Notificações</string>
    <string name="ja_tens_uma_conta">Já tens uma conta?</string>
    <string name="esqueceu_se_da_palavra_passe">Esqueceu-se da palavra-passe?</string>
    <string name="entrar_na_conta">ENTRAR NA CONTA</string>
    <string name="outros_metodos_de_login">Outros metodos de login</string>
    <string name="perfil">Perfil</string>
    <string name="informacao_da_conta">Informação da Conta</string>
    <string name="nome">Nome</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="primeiros_passos">Primeiros passos!</string>
    <string name="confirmar_palavra_passe">Confirmar Palavra-passe</string>
    <string name="eu_aceito_os_termos_de_uso">Eu aceito os Termos de Uso</string>
    <string name="continuar">CONTINUAR</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="conexao_internet">Verifique a sua conexão à internet</string>
    <string name="recuperar_palavra_passe">Recuperar palavra-passe</string>
    <string name="especializacao">Especialização</string>
    <string name="nome_do_a_doutor_a">Nome do(a) Doutor(a)</string>
    <string name="pavilhao">Pavilhão</string>
    <string name="piso">Piso</string>
    <string name="porta">Porta</string>
    <string name="hora">Hora</string>

</resources>