<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="275dp"
    android:layout_gravity="center"
    android:background="@drawable/formulariologin"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imageViewLineEmailRecoveryEmailPop"
        android:layout_width="270dp"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRecoveryEmailPop"
        app:layout_constraintEnd_toEndOf="@+id/editTextRecoveryEmailPop"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRecoveryEmailPop"
        app:srcCompat="@drawable/backgroundrowschedule" />

    <TextView
        android:id="@+id/textViewRecupeararRecoveryEmailPop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/recuperar_palavra_passe"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRecoveryEmailPop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/transparency"
        android:ems="13"
        android:fontFamily="@font/roboto"
        android:hint="@string/email_login"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:labelFor="@id/textViewEmailLogin"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textViewRecupeararRecoveryEmailPop"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/textViewRecupeararRecoveryEmailPop"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecupeararRecoveryEmailPop" />

    <Button
        android:id="@+id/buttonEnviarPop"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttonwhite"
        android:fontFamily="@font/roboto"
        android:text="@string/enviar"
        android:textColor="#36BFB8"
        android:textSize="24sp"
        app:backgroundTint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="@+id/editTextRecoveryEmailPop"
        app:layout_constraintStart_toStartOf="@+id/editTextRecoveryEmailPop"
        app:layout_constraintTop_toBottomOf="@+id/editTextRecoveryEmailPop" />
</androidx.constraintlayout.widget.ConstraintLayout>