<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Login">

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_login"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageViewFormLogin"
        android:layout_width="338dp"
        android:layout_height="313dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogin"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@drawable/retangulo_formulario"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto"
        android:text="Email ou Telemovel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewFormLogin"
        app:layout_constraintTop_toTopOf="@+id/imageViewFormLogin" />

    <TextView
        android:id="@+id/textViewPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto"
        android:text="@string/password_login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/imageViewFormLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin" />

    <EditText
        android:id="@+id/editTextEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:backgroundTint="#FFFFFF"
        android:ems="13"
        android:fontFamily="@font/roboto"
        android:hint="@string/email_login"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:labelFor="@id/textViewEmailLogin"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#36BFB8"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFormLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewFormLogin"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailLogin" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:backgroundTint="#FFFFFF"
        android:ems="13"
        android:fontFamily="@font/roboto"
        android:hint="@string/password_login"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#36BFB8"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFormLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewFormLogin"
        app:layout_constraintTop_toBottomOf="@+id/textViewPasswordLogin"
        android:layout_width="wrap_content" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="222dp"
        android:layout_height="56dp"
        android:background="@drawable/btlogin_login"
        android:text="@string/entrar"
        android:textSize="24sp"
        android:fontFamily="@font/roboto"
        android:textColor="#36BFB8"
        app:backgroundTint="#F6F6F6"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFormLogin"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFormLogin"
        app:layout_constraintStart_toStartOf="@+id/imageViewFormLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" />

    <Button
        android:id="@+id/buttonInfoLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/btinfo"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewJaTemContaLogin"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:text="Ja tem alguma conta?"
        android:textColor="#21736F"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/imageViewLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>